--- a/style.css
+++ b/style.css
@@ -126,6 +126,19 @@ article:nth-child(7){
 article:nth-child(8){
     background-color: var(--second-color);
 }
+article:nth-child(9){
+    background-color: var(--first-color);
+}
+article:nth-child(10){
+    background-color: var(--second-color);
+}
+article:nth-child(11){
+    background-color: var(--first-color);
+}
+article:nth-child(12){
+    background-color: var(--second-color);
+}
+
 .card__img img{
     width: 180px;
     height: auto;
